# gpr

./: .gitignore  README.md  pyproject.toml
src/gpr/: __init__.py  cli.py  git.py  prompt.py
src/gpr/providers/: __init__.py  base.py  claude.py  ollama.py  openai.py
tests/: test_cli.py  test_git.py  test_integration_llm.py  test_prompt.py  test_providers.py
