[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpr-ai"
version = "0.1.0"
description = "AI-powered PR description generator that understands your git diff"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "faw21" }]
requires-python = ">=3.9"
keywords = ["git", "pull-request", "ai", "llm", "github", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "gitpython>=3.1",
    "httpx>=0.24",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/faw21/gpr"
Repository = "https://github.com/faw21/gpr"

[project.scripts]
gpr = "gpr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gpr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=gpr --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
